--- a/assets/css/demo/asymmetric-9.css
+++ b/assets/css/demo/asymmetric-9.css
@@ -78,7 +78,14 @@ input[type="submit"],
 	}
 }
 
+@media (max-width: 575px) {
+	 img.logo-default {
+        max-width: 225px !important;
+    }
+}
+
 @media (max-width: 767px) {
+	 
 	.lity-modal .container {
 		padding: 30px 15px;
 	}
